--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-ui-router": "~0.2.15",
     "jquery": "~2.1.4",
     "bootstrap": "~3.3.6",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "less": "~2.5.3"
   }
 }
