--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "jquery": "~2.1.4",
     "bootstrap": "~3.3.6",
     "underscore": "~1.8.3",
-    "less": "~2.5.3"
+    "less": "~2.5.3",
+    "angular-cookies": "~1.4.8"
   }
 }
