--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "bootstrap": "~3.3.6",
     "underscore": "~1.8.3",
     "less": "~2.5.3",
-    "angular-cookies": "~1.4.8"
+    "angular-cookies": "~1.4.8",
+    "requirejs": "~2.1.22",
+    "domReady": "~2.0.1"
   }
 }
